css/index.css
/* Millie MD 2024 */

/* COLOURS */
/* From Revolution Bars Group Website */
:root{

    --black: #000000;
    --white: #ffffff;

    --red: #da2050; /* Incorrect answers*/
    --orange: #f47525;
    --blue: #06BEE6; /* Corrections? */
    --green: #19da9c; /* Correct answers*/
    --pink: #EE1E91;
    --purple: #53328C;
}

/* GENERAL */

* {

    margin: 0;
    padding: 0;

    font-family: "Poppins",Arial,Helvetica,sans-serif ;

}

html, body{

    width: 100%;
    height: 100%;

    font-size: 100%;
    font-weight: 400;

}

header{

    background-color: var(--black);
    color: var(--white);

    padding: 1vw;
    width: 98%; /* -1% on either side for padding */

}

.ver-flex{
    display: flex;
    flex-direction: column;

    justify-content: center;

}

.hor-flex{
    display: flex;
    flex-direction: row;

    justify-content: center;

}

.space-apart{
    justify-content: space-between;
}

.center{
    align-items: center;
}

button{

    border: 0;
    border-radius: 0.5vmin;

    transition:all ease 0.3s;

    padding: 2vw 4vw;
    margin: 1vw;

    color: var(--white);

}

/* TYPOGRAPHY */

h1 {
    font-size: 4.210rem; 
}

h2 {
    font-size: 3.158rem; 
}

h3 {
    font-size: 2.369rem; 
}

h4 {
    font-size: 1.777rem; 
}

h5 {
    font-size: 1.333rem;
}

p{
    font-size: 1rem;
}

h1, h2, h3{
    font-weight: 700;
    
    margin-top: 1rem;
    margin-bottom: 0.25rem;
}

/* HOME PAGE */

#home-page{
    min-height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-evenly;

    text-align: center;
}

#home-page button{
    background-image: linear-gradient(to right, var(--red) 0%, #f47525 40%, var(--orange) 60%, var(--red) 100%);

}

/* LEARN MODE */

#quiz-wrapper{

    height: 80%;

    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding: 1vw;
}

/* Question formatting */

.question{

    margin: 5%;

    padding: 2rem;

    border: solid 2px lightgrey;

    display: grid;

}

.question h2, .question h3{
    text-align: center;
}

@media screen and (min-width: 1200px){

    .question {
        grid-template-columns: 1fr 1fr;
    }

    .question .cocktail-name{
        grid-column: span 2;
    }

}

.question img {

    object-fit: contain;
    max-width: 25%;

}

.incorrect{
    color: var(--red);
}

.correct{
    color: var(--green);
}

/* Controls */

.question input{

    font-weight: bold;
    background-color: #f5f4f4;
    padding: 0.25vw;
   margin: 0.25vw;

    border: solid 1px lightgrey;
    border-radius: 0.5vmin;

    text-align: center;

}

#next-button{
    background-image: linear-gradient(to right, var(--purple) 0%, var(--pink) 40%, var(--pink) 60%, var(--purple) 100%);
}

#check-button{
    background-image: linear-gradient(to right, var(--green) 0%, var(--blue) 40%, var(--blue) 60%, var(--green) 100%);
}

